--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="Untitled.png" target="_blank">Зразок</a>
     <div  style="text-align: center;">
         <h1>Employee Interests Survey form</h1>
         <div>
